removed dumb hack and updated docker-compose file

--- a/deployproxy/nginx.conf
+++ b/deployproxy/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ${DOMAIN};
+    server_name "jamesvps.tk";
 
     location / {
         proxy_pass http://musicserver:8000;
