--- a/deployproxy/dockerfile
+++ b/deployproxy/dockerfile
@@ -1,5 +1,3 @@
 FROM nginx
 
-COPY nginx.conf /tmp/config.template
-#this is a stupid hack
-RUN envsubst < /tmp/config.template > /etc/nginx/conf.d/musicserver.conf
+COPY nginx.conf /etc/nginx/conf.d/musicserver.conf
