--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
         #TODO: add proper volumes
         depends_on:
             - db
+        volumes:
+            - ./deployproxy/media:/root/deployproxy/media
 
 
     deployproxy:
@@ -41,3 +43,5 @@ services:
             - 8000:80
         depends_on:
             - musicserver
+        volumes:
+            - ./deployproxy/media:/etc/media
