set nginx max file upload size to 500MB

--- a/deployproxy/nginx.conf
+++ b/deployproxy/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name "jamesvps.tk";
+    client_max_body_size 500M;
 
     location / {
         proxy_pass http://musicserver:8000;
