--- a/deployproxy/nginx.conf
+++ b/deployproxy/nginx.conf
@@ -7,4 +7,12 @@ server {
         proxy_pass http://musicserver:8000;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
+
+    location /static {
+        root /etc/staticfiles;
+    }
+
+    location /media {
+        root /etc/media;
+    }
 }
