--- a/deployproxy/nginx.conf
+++ b/deployproxy/nginx.conf
@@ -9,10 +9,10 @@ server {
     }
 
     location /static {
-        root /etc/staticfiles;
+        root /etc/static;
     }
 
     location /media {
-        root /etc/media;
+        root /etc/static;
     }
 }
