updated volumes to use existent folders

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
             - db
         volumes:
             - ./deployproxy/media:/root/deployproxy/media
-            - ./deployproxy/static:/root/deployproxy/static
+            - ./deployproxy/staticfiles:/root/deployproxy/static
 
 
     deployproxy:
@@ -46,4 +46,4 @@ services:
             - musicserver
         volumes:
             - ./deployproxy/media:/etc/static/media
-            - ./deployproxy/static:/etc/static/static
+            - ./deployproxy/staticfiles:/etc/static/static
