--- a/deployproxy/nginx.conf
+++ b/deployproxy/nginx.conf
@@ -3,6 +3,40 @@ server {
     server_name "jamesvps.tk";
     client_max_body_size 500M;
 
+    #if you have ssl certificates put them into a folder called certs (in the repository root)
+    #if you don't comment the return 301 line and uncomment the rest of this server block
+
+    return 301 https://$server_name;
+
+    #location / {
+    #    proxy_pass http://musicserver:8000;
+    #    proxy_set_header X-Forwarded-For $remote_addr;
+    #}
+
+    #location /static {
+    #    root /etc/static;
+    #}
+
+    #location /media {
+    #    root /etc/static;
+    #}
+}
+
+server {
+    listen 443 ssl;
+    server_name "jamesvps.tk";
+    client_max_body_size 500M;
+
+    ssl_certificate /etc/certs/fullchain.pem;
+    ssl_certificate_key /etc/certs/privkey.pem;
+
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+
     location / {
         proxy_pass http://musicserver:8000;
         proxy_set_header X-Forwarded-For $remote_addr;
