--- a/deployproxy/nginx.conf
+++ b/deployproxy/nginx.conf
@@ -6,7 +6,7 @@ server {
     #if you have ssl certificates put them into a folder called certs (in the repository root)
     #if you don't comment the return 301 line and uncomment the rest of this server block
 
-    return 301 https://$server_name;
+    return 301 https://$server_name$request_uri;
 
     #location / {
     #    proxy_pass http://musicserver:8000;
