updated docker stuff to be less dumb

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
 
     musicserver:
         image: "musicserver"
+        build: .
         environment:
             #set this secret to a new valid value in production!
             secret: "jl-7cir&r7zcj-w2)ox$$^!j5$$j=hj=rdh!euv+a73h5zjt*bri"
@@ -40,6 +41,7 @@ services:
 
     deployproxy:
         image: "deployproxy"
+        build: ./deployproxy
         ports:
             - 8000:80
             - 8443:443
