--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Django==3.1.12
-python-ffmpeg-video-streaming==0.1.14
-ffprobe-python==1.0.3
-gunicorn==20.1.0
-psycopg2-binary==2.8.6
-django-user-agents==0.4.0
+Django~=3.1.13
+python-ffmpeg-video-streaming~=0.1.14
+ffprobe-python~=1.0.3
+gunicorn~=20.1.0
+psycopg2-binary~=2.8.6
+django-user-agents~=0.4.0
